# supply_server_2

./: .dockerignore  .gitignore  .project  Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_22_2012-3a46a93baa6b_added_tasks_views_3.py  2025_01_27_1234-5af26f4675c6_migration_task_to_machinery.py  2025_01_30_1354-7be72c38e726_migration_problem_to_machinery.py  2025_01_31_1747-5ea6dcb60876_added_subscribe_table_2.py  2025_02_01_1718-6db16ccc3c6d_added_subscribe_table_3.py  2025_02_04_1812-48cd35550ac5_add_category_id_in_problems.py  2025_02_20_2004-895fb3a09b80_add_new_mashinery_field.py  2025_02_25_2110-9bf3f708cb69_add_frame_number_to_machinery.py  2025_02_27_1316-c554da498879_add_nullable.py  2025_03_03_1556-c0dd5daf8425_added_type_id_to_problem_5.py  2025_03_03_1559-ad8ed78c5bb9_added_type_id_to_problem_6.py  2025_03_10_1211-e831d2f79c2c_added_type_id_to_problem_7.py  2025_03_10_1219-86ddfc6c78ab_added_type_id_to_problem_8.py  2025_03_29_1229-7f0acd1af5f7_added_event_location_to_task.py  2025_03_29_1312-0cd2cc0e0e2d_added_event_location_to_task_2.py  2025_03_29_1649-b241f21bd0f8_add_suppliers_table.py  2025_04_01_1554-1eb22cd7bf56_add_orders_table.py  2025_04_01_1742-e200eb6caf82_reinitialize_database.py  (+4 more)
api_v1/: __init__.py
bot/: bot.py  handlers.py
core/: config.py  security.py  websocket_utils.py
ssl/: certificate.crt  certificate.csr  certificate.key  fullchain.crt
uploaded_files/: 07118f4db5f04342a158e5f212995b60_1631354232817_bulletin (1).jfif
users/: crud.py  routes.py  shemas.py
(+57 files in other folders)
