[tool.poetry]
name = "supply-server"
version = "0.1.0"
description = ""
authors = ["taras"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
email-validator = "^2.2.0"
python-telegram-bot = "^21.10"
httpx = "^0.28.1"
aiogram = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
